# docs/swagger.yaml
@@ -16,10 +16,10 @@ definitions:
     - REJECTED
     type: string
     x-enum-varnames:
-    - CASE_OPEN
-    - PENDING
-    - APPROVED
-    - REJECTED
+    - MAINTENANCE_LOG_STATUS_CASE_OPEN
+    - MAINTENANCE_LOG_STATUS_PENDING
+    - MAINTENANCE_LOG_STATUS_APPROVED
+    - MAINTENANCE_LOG_STATUS_REJECTED
   domain.Response:
     properties:
       data: {}
@@ -73,18 +73,7 @@ definitions:
     - paymentName
     - paymentNumber
     type: object
-  payload.MAINTENANCE_CREATE:
-    properties:
-      maintenance_log:
-        items:
-          $ref: '#/definitions/payload.MAINTENANCE_LOG_ON_MAINTENANCE_CREATE'
-        type: array
-      room_id:
-        type: integer
-    required:
-    - room_id
-    type: object
-  payload.MAINTENANCE_LOG_ON_MAINTENANCE_CREATE:
+  payload.Maintenance_Log_On_Maintenance_Create:
     properties:
       description:
         type: string
@@ -94,17 +83,28 @@ definitions:
     - description
     - status
     type: object
+  payload.MaintenanceCreateDTO:
+    properties:
+      maintenanceLog:
+        items:
+          $ref: '#/definitions/payload.Maintenance_Log_On_Maintenance_Create'
+        type: array
+      roomId:
+        type: integer
+    required:
+    - roomId
+    type: object
   payload.MaintenanceLogCreate:
     properties:
       description:
         type: string
-      maintenance_id:
+      maintenanceId:
         type: integer
       status:
         $ref: '#/definitions/domain.MAINTENANCE_LOG_STATUS'
     required:
     - description
-    - maintenance_id
+    - maintenanceId
     - status
     type: object
   payload.UpdateRoomType:
@@ -322,7 +322,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/payload.MAINTENANCE_CREATE'
+          $ref: '#/definitions/payload.MaintenanceCreateDTO'
       produces:
       - application/json
       responses:
